# Conways_Game_of_Life

./: CMakeLists.txt  Grid.cpp  Grid.hpp  README.md  app  game_of_life.cpp  graphic.cpp  graphic.hpp  makefile  text.cpp  text.hpp
